--- a/pages/about.html
+++ b/pages/about.html
@@ -44,6 +44,17 @@
     <p>El amigo del peregrino ha sido creado con HTML, CSS y JavaScript. Para el diseño de la página hemos utilizado Bootstrap.</p>
     <br>
   </div>
-  <script src="../js/index.js"></script>
+  <footer>
+    <div class="social-links">
+      <p>Síguenos en nuestras redes sociales</p>
+      <a href="https://www.instagram.com/" target="_blank"><img src="../img/social/instagram.png" alt="Instagram"></a>
+      <a href="https://www.twitter.com/" target="_blank"><img src="../img/social/twitter.png" alt="Twitter"></a>
+      <a href="https://www.facebook.com/" target="_blank"><img src="../img/social/facebook.png" alt="Facebook"></a>
+      <a href="https://www.tiktok.com/" target="_blank"><img src="../img/social/tiktok.png" alt="TikTok"></a>
+    </div>
+    <div class="spacer"></div>
+    <p style="text-align: center;">Copyright &copy; 2023 - El amigo del peregrino</p>
+  </footer>
+  <script src="../js/jquery-3.6.4.min.js"></script>
 </body>
 </html>
