--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -31,8 +31,7 @@
       </ul>
     </div>
   </nav>
-  <div class="spacer"></div>
-  <div class="content" style="position: absolute;">
+  <div class="content">
     <div class="info-general">
       <figure class="info-imagen">
         <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
@@ -89,7 +88,7 @@
       </div>
     </div>
   </div>
-  <script src="../js/index.js"></script>
+  <script src="../js/jquery-3.6.4.min.js"></script>
   
 </body>
 </html>
