Algo de JES6 y arreglo de estilo

--- a/pages/index.html
+++ b/pages/index.html
@@ -135,7 +135,7 @@
     <div class="spacer"></div>
     <div id="comentarios">
       <h2>Déjanos un comentario</h2>
-      <form>
+      <form id="formulario-comentarios">
         <label for="nombre">Nombre</label>
         <input type="text" id="nombre" name="nombre" placeholder="Tu nombre">
         <label for="email">Email</label>
