efecto difuminar imagen

--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -37,14 +37,14 @@
         <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
         <h1 class="titulo">Santiago de Compostela</h1>
       </figure>
+      <p>
+        La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
+        Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
+        Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
+        La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
+        La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+      </p>
     </div>
-    <p class="info-parada">
-      La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
-      Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
-      Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
-      La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
-      La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
-    </p>
     <hr>
     <div class="sitios-parada">
       <div class="container-fluid">
@@ -53,7 +53,7 @@
           <div class="col-sm">
             <figure>
               <h5 id="titulo">La Galiciana</h5>
-              <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana" id="imagen-sitio">
+              <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana">
               <p class="texto-imagen">Disfruta de los mejores sabores santiagueses</p>
               <p><a href="https://www.mercadolagaliciana.es/">Página del sitio</a></p>
             </figure>
@@ -89,6 +89,6 @@
     </div>
   </div>
   <script src="../js/jquery-3.6.4.min.js"></script>
-  
+  <script src="../js/paradas.js"></script>
 </body>
 </html>
