efecto difuminar imagen completado

--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -53,17 +53,15 @@
           <div class="col-sm">
             <figure>
               <h5 id="titulo">La Galiciana</h5>
-              <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana">
-              <p class="texto-imagen">Disfruta de los mejores sabores santiagueses</p>
-              <p><a href="https://www.mercadolagaliciana.es/">Página del sitio</a></p>
+              <a href="https://www.mercadolagaliciana.es/"> <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana"></a>
+              <p>Disfruta de los mejores sabores santiagueses</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
               <h5 id="titulo">Pepa a Loba</h5>
-              <img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba">
-              <p class="texto-imagen">Situado en plena zona vella.</p>
-              <p><a href="https://www.mercadolagaliciana.es/">Instagram</a></p>
+              <a href="https://www.mercadolagaliciana.es/"><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba"></a>
+              <p>Situado en plena zona vella.</p>
             </figure>
           </div>
           <hr>
@@ -73,16 +71,16 @@
           <div class="col-sm">
             <figure>
               <h5 id="titulo">Discoteca Ruta</h5>
-              <img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta">
-              <p><a href="https://www.instagram.com/discotecarutaoficial/">Discoteca Ruta</a></p>
+              <a href="https://www.instagram.com/discotecarutaoficial/"><img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta"></a>
+              <p>La mejor música de actualidad para pasarlo en grande.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
               <h5 id="titulo">Pub Momo</h5>
-              <img src="../img/santiago/momo.jpg" alt="Discoteca Ruta">
-              <p><a href="https://www.instagram.com/discotecarutaoficial/">Sitio web</a></p>
-            </figure>            
+              <a href="https://www.instagram.com/discotecarutaoficial/"><img src="../img/santiago/momo.jpg" alt="Discoteca Ruta"></a>
+              <p>Dardos, futbolín, billar... mientras disfrutas de una bebida!</p>
+            </figure>
           </div>
         </div>
       </div>
