links obtenidos por JSON

--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -53,14 +53,14 @@
           <div class="col-sm">
             <figure>
               <h5 id="titulo">La Galiciana</h5>
-              <a href="https://www.mercadolagaliciana.es/"> <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana"></a>
+              <a><img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana"></a>
               <p>Disfruta de los mejores sabores santiagueses</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
               <h5 id="titulo">Pepa a Loba</h5>
-              <a href="https://www.mercadolagaliciana.es/"><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba"></a>
+              <a><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba"></a>
               <p>Situado en plena zona vella.</p>
             </figure>
           </div>
@@ -71,17 +71,24 @@
           <div class="col-sm">
             <figure>
               <h5 id="titulo">Discoteca Ruta</h5>
-              <a href="https://www.instagram.com/discotecarutaoficial/"><img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta"></a>
+              <a><img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta"></a>
               <p>La mejor música de actualidad para pasarlo en grande.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
               <h5 id="titulo">Pub Momo</h5>
-              <a href="https://www.instagram.com/discotecarutaoficial/"><img src="../img/santiago/momo.jpg" alt="Discoteca Ruta"></a>
+              <a><img src="../img/santiago/momo.jpg" alt="Discoteca Ruta"></a>
               <p>Dardos, futbolín, billar... mientras disfrutas de una bebida!</p>
             </figure>
           </div>
+          <div class="col-sm">
+            <figure>
+              <h5 id="titulo">Pub Momo</h5>
+              <a><img src="../img/santiago/momo.jpg" alt="Discoteca Ruta"></a>
+              <p>Dardos, futbolín, billar... mientras disfrutas de una bebida!</p>
+            </figure>
+          </div>          
         </div>
       </div>
     </div>
