efecto difuminar y enlaces JSON tambien en Home

--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -94,6 +94,7 @@
     </div>
   </div>
   <script src="../js/jquery-3.6.4.min.js"></script>
+  <script src="../js/index.js"></script>
   <script src="../js/paradas.js"></script>
 </body>
 </html>
