--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-</head>
+  </head>
 
 <body>
   <nav id="navbar">
@@ -42,61 +42,67 @@
       <img src="../img/destacada.png" alt="Lugar destacado">
     </figure>
     <div class="spacer"></div>
-    <div class="sitios-home">  
+    <div class="sitios-parada">  
       <div class="container-fluid">
         <h2>Top Restaurantes</h2>
         <div class="row">
           <div class="col-sm">
             <figure>
-              <h3>Pepa a Loba (Santiago)</h3>
-              <p>Este céntrico restaurante en la zona vieja de Santiago te embaucará con sus sabores</p>  
-              <img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)">
+              <h4>Pepa a Loba</h4>
+              <h6>Santiago</h6>
+              <a><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)"></a>
+              <p>Este céntrico restaurante en la zona vieja de Santiago te embaucará con sus sabores</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h3>La Comtienda (Burgos)</h3>
+              <h4>La Comtienda</h4>
+              <h6>Burgos</h6>
+              <a><img src="../img/burgos/lacomtienda.jpg" alt="La Comtienda (Burgos)"></a>
               <p>No te vayas de Burgos sin probar las maravillas de este tradicional restaurante</p>
-              <img src="../img/burgos/lacomtienda.jpg" alt="La Comtienda (Burgos)">
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h3>Oillarburu (Saint-Jean-Pied-de-Port)</h3>
+              <h4>Oillarburu</h4>
+              <h6>Saint-Jean-Pied-de-Port</h6>
+              <a><img src="../img/saintjean/oillarburu.jpg" alt="Oillarburu (Saint-Jean-Pied-de-Port)"></a>
               <p>Prueba las mejores delicias de la cocina vasca en la primera parada del camino frances</p>
-              <img src="../img/saintjean/oillarburu.jpg" alt="Oillarburu (Saint-Jean-Pied-de-Port)">
             </figure>
           </div>
         </div>
         <div class="row sitios-ocultos" style="visibility: none;"></div>
       </div>
       <button class="btn btn-primary" id="boton-cargar-sitios">Ver más</button>
-      </div>
       <div class="container-fluid">
         <h2>Top Pubs</h2>
         <div class="row">
           <div class="col-sm">
             <figure>
-              <h3>Ruta (Santiago)</h3>
+              <h4>Discoteca Ruta</h4>
+              <h6>Santiago</h6>
+              <a><img src="../img/santiago/discoteca-ruta.jpeg" alt="Ruta (Santiago)"></a>
               <p>En esta discoteca-pub te lo pasaras en grande con musica actual</p>  
-              <img src="../img/santiago/discoteca-ruta.jpeg" alt="Ruta (Santiago)">
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h3>Gabana (León)</h3>
+              <h4>Gabanna</h4>
+              <h6>León</h6>
+              <a><img src="../img/leon/gabana.jpg" alt="Gabanna (León)"></a>
               <p>Si ser joven te quedó atrás, esta discoteca de mediana edad puede ser ideal para ti</p>
-              <img src="../img/leon/gabana.jpg" alt="Gabana (León)">
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h3>Cooper Club (Burgos)</h3>
+              <h4>Cooper Club</h4>
+              <h6>Burgos</h6>
+              <a><img src="../img/burgos/cooper.jpg" alt="Cooper Club (Burgos)"></a>
               <p>¿Buscas algo intermedio entre discoteca y pub? Cooper Club será tu sitio.</p>
-              <img src="../img/burgos/cooper.jpg" alt="Cooper Club (Burgos)">
             </figure>
           </div>
         </div>
+      </div>
     </div>
     <div class="spacer"></div>
     <div class="opiniones">
@@ -107,20 +113,20 @@
             <figure>
               <h3>Opinión de Juan</h3>
               <p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p>
-              <img src="../img/opiniones/juan.jpg" alt="Opinión de Juan">
+              <a><img src="../img/opiniones/juan.jpg" alt="Opinión de Juan"></a>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
               <h3>Opinión de María</h3>
               <p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p>
-              <img src="../img/opiniones/maria.jpg" alt="Opinión de María">
+              <a><img src="../img/opiniones/maria.jpg" alt="Opinión de María"></a>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
               <h3>Opinión de Ana</h3>
-              <p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p>
+              <a><p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p></a>
               <img src="../img/opiniones/ana.jpg" alt="Opinión de Ana">
             </figure>
           </div>
@@ -162,5 +168,6 @@
   </footer>
   <script src="../js/jquery-3.6.4.min.js"></script>
   <script src="../js/index.js"></script>
+  <script src="../js/paradas.js"></script>
 </body>
 </html>
