paradas faltantes completadas

--- a/pages/burgos.html
+++ b/pages/burgos.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Santiago de Compostela - El amigo del peregrino</title>
+    <title>Burgos - El amigo del peregrino</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -34,15 +34,13 @@
   <div class="content">
     <div class="info-general">
       <figure class="info-imagen">
-        <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
-        <h1 class="titulo">Santiago de Compostela</h1>
+        <img src="../img/burgos/catedral.jpg" alt="Catedral de Burgos">
+        <h1 class="titulo">Burgos</h1>
       </figure>
       <p>
-        La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
-        Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
-        Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
-        La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
-        La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+        Burgos, capital de provincia de la comunidad autónoma española de Castilla y León, destaca por su arquitectura medieval.
+        Su monumento más famoso es la catedral de Santa María, de estilo gótico francés, cuyas tres entradas principales están flanqueadas por campanarios ornamentados.
+        En su interior se halla la capilla de Condestable, decorada con figuras de santos, y la tumba de El Cid (Rodrigo Díaz de Vivar), comandante militar del siglo XI.
       </p>
     </div>
     <hr>
@@ -52,23 +50,23 @@
           <h3>Dónde Comer</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">La Galiciana</h5>
-              <a><img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana"></a>
-              <p>Disfruta de los mejores sabores santiagueses</p>
+              <h4>La Comtienda</h4>
+              <a><img src="../img/burgos/lacomtienda.jpg" alt="La Comtienda"></a>
+              <p>Restaurante que aúna lo tradicional con una decoración moderna.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pepa a Loba</h5>
-              <a><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba"></a>
-              <p>Situado en plena zona vella.</p>
+              <h5 id="titulo">El Fogón De Jesusón</h5>
+              <a><img src="../img/burgos/el-fogon-de-jesuson.webp" alt="El Fogón De Jesusón"></a>
+              <p>Restaurante familiar de productos locales con un toque asiático.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">O Rei do Bocadillo</h5>
-              <a><img src="../img/santiago/o-rei-do-bocadillo.jpg" alt="O Rei do Bocadillo"></a>
-              <p>Bocadillos caseros a muy buen precio. ¡No te lo pierdas!</p>
+              <h4>Asador San Lorenzo</h4>
+              <a><img src="../img/burgos/asador-san-lorenzo.png" alt="Asador San Lorenzo"></a>
+              <p>Servicios refinados e instalaciones punteras en un ambiente casero y acogedor.</p>
             </figure>
           </div>
           <hr>
@@ -77,23 +75,23 @@
           <h3>Vida nocturna</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Ruta</h5>
-              <a><img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta"></a>
-              <p>La mejor música de actualidad para pasarlo en grande.</p>
+              <h4>Cooper Club</h4>
+              <a><img src="../img/burgos/cooper.jpg" alt="Cooper Club (Burgos)"></a>
+              <p>¿Buscas algo intermedio entre discoteca y pub? Cooper Club será tu sitio.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Vanitas</h5>
-              <a><img src="../img/santiago/vanitas.webp" alt="Discoteca Vanitas"></a>
-              <p>Discoteca céntrica con un gran ambiente.</p>
+              <h5 id="titulo">Siete Setenta 7,70</h5>
+              <a><img src="../img/burgos/siete-setenta.jpg" alt="Siete Setenta 7,70"></a>
+              <p>Distoteca muy cuidada con esencia popera, toques indies y buen rollo.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pub Momo</h5>
-              <a><img src="../img/santiago/momo.jpg" alt="Pub Momo"></a>
-              <p>Dardos, futbolín, billar... un pub de los de siempre!</p>
+              <h5 id="titulo">Suit Drink</h5>
+              <a><img src="../img/burgos/suit-drink.jpg" alt="Suit Drink"></a>
+              <p>Variedad de bebidas y cócteles de muy buena calidad. </p>
             </figure>
           </div>          
         </div>
