--- a/pages/leon.html
+++ b/pages/leon.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Santiago de Compostela - El amigo del peregrino</title>
+    <title>León - El amigo del peregrino</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -34,15 +34,14 @@
   <div class="content">
     <div class="info-general">
       <figure class="info-imagen">
-        <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
-        <h1 class="titulo">Santiago de Compostela</h1>
+        <img src="../img/leon/catedral.jpg" alt="Catedral de León">
+        <h1 class="titulo">León</h1>
       </figure>
       <p>
-        La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
-        Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
-        Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
-        La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
-        La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+        León, capital de la provincia de León, es una ciudad del noroeste de España situada junto al río Bernesga.
+        La ciudad alberga muchas iglesias y catedrales que destacan por su arquitectura y arte.
+        Entre ellas se encuentra la catedral de León, de estilo gótico, que data del siglo XIII y destaca por sus torres y arbotantes.
+        La basílica románica de San Isidoro, del siglo X, es conocida por sus frescos y tumbas reales.
       </p>
     </div>
     <hr>
@@ -52,23 +51,23 @@
           <h3>Dónde Comer</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">La Galiciana</h5>
-              <a><img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana"></a>
-              <p>Disfruta de los mejores sabores santiagueses</p>
+              <h5 id="titulo">Carea Bistró</h5>
+              <a><img src="../img/leon/carea-bistro.jpg" alt="Carea Bistró"></a>
+              <p>Restaurante en un enclave único en pleno barrio Húmedo.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pepa a Loba</h5>
-              <a><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba"></a>
-              <p>Situado en plena zona vella.</p>
+              <h5 id="titulo">Rúa 11</h5>
+              <a><img src="../img/leon/rua-11.jpg" alt="Rúa 11"></a>
+              <p>Tránsito de peregrinos y turistas, es una opción económica en tu camino.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">O Rei do Bocadillo</h5>
-              <a><img src="../img/santiago/o-rei-do-bocadillo.jpg" alt="O Rei do Bocadillo"></a>
-              <p>Bocadillos caseros a muy buen precio. ¡No te lo pierdas!</p>
+              <h5 id="titulo">Casa Mando</h5>
+              <a><img src="../img/leon/casa-mando.jpg" alt="Casa Mandoo"></a>
+              <p>Productos de la tierra de alta calidad.</p>
             </figure>
           </div>
           <hr>
@@ -77,23 +76,23 @@
           <h3>Vida nocturna</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Ruta</h5>
-              <a><img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta"></a>
-              <p>La mejor música de actualidad para pasarlo en grande.</p>
+              <h5 id="titulo">Gabanna</h5>
+              <a><img src="../img/leon/gabana.jpg" alt="Gabanna"></a>
+              <p>Ideal para tomarse una cerveza en un buen ambiente.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Vanitas</h5>
-              <a><img src="../img/santiago/vanitas.webp" alt="Discoteca Vanitas"></a>
-              <p>Discoteca céntrica con un gran ambiente.</p>
+              <h5 id="titulo">El Fuelle</h5>
+              <a><img src="../img/leon/el-fuelle.jpg" alt="El Fuelle"></a>
+              <p>Una coctelería tranquila para disfrutar de una conversación y una copa.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pub Momo</h5>
-              <a><img src="../img/santiago/momo.jpg" alt="Pub Momo"></a>
-              <p>Dardos, futbolín, billar... un pub de los de siempre!</p>
+              <h5 id="titulo">Taxman Beatles Bar</h5>
+              <a><img src="../img/leon/taxman-beatles-bar.jpeg" alt="Taxman Beatles Bar"></a>
+              <p>Para los amantes de la cerveza artesana y la buena música.</p>
             </figure>
           </div>          
         </div>
