--- a/pages/pamplona.html
+++ b/pages/pamplona.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Santiago de Compostela - El amigo del peregrino</title>
+    <title>Pamplona - El amigo del peregrino</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -34,15 +34,15 @@
   <div class="content">
     <div class="info-general">
       <figure class="info-imagen">
-        <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
-        <h1 class="titulo">Santiago de Compostela</h1>
+        <img src="../img/pamplona/plaza-castillo.jpg" alt="Plaza Castillo de Pamplona">
+        <h1 class="titulo">Pamplona</h1>
       </figure>
       <p>
-        La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
-        Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
-        Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
-        La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
-        La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+        Pamplona, capital de la provincia de Navarra, es una ciudad del norte de España.
+        Es conocida principalmente por la celebración de encierros de toros (fiesta de San Fermín) que tiene lugar en julio.
+        Durante esta legendaria fiesta que dura varios días, los toros persiguen a corredores atrevidos por las calles de la ciudad.
+        Pamplona, que es una de las principales paradas del Camino de Santiago (ruta de peregrinación de la época medieval),
+        también destaca por sus iglesias de estilo gótico, como la iglesia fortificada de San Nicolás.
       </p>
     </div>
     <hr>
@@ -52,23 +52,23 @@
           <h3>Dónde Comer</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">La Galiciana</h5>
-              <a><img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana"></a>
-              <p>Disfruta de los mejores sabores santiagueses</p>
+              <h4>Verduarte</h4>
+              <a><img src="../img/pamplona/verduarte.jpg" alt="Verduarte"></a>
+              <p>Restaurante de alta cocina, galardonado con un Sol Repsol 2020.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pepa a Loba</h5>
-              <a><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba"></a>
-              <p>Situado en plena zona vella.</p>
+              <h5 id="titulo">La Fogoneta Culibar</h5>
+              <a><img src="../img/pamplona/la-fogoneta.jpg" alt="La Fogoneta Culibar"></a>
+              <p>Pequeño bar-restaurante de platos típicos de la tierra en diferentes formatos.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">O Rei do Bocadillo</h5>
-              <a><img src="../img/santiago/o-rei-do-bocadillo.jpg" alt="O Rei do Bocadillo"></a>
-              <p>Bocadillos caseros a muy buen precio. ¡No te lo pierdas!</p>
+              <h4>Bar Gaucho</h4>
+              <a><img src="../img/pamplona/bar-gaucho.JPG" alt="Bar Gaucho"></a>
+              <p>Uno de los máximos exponentes de la cocina en miniatura navarra.</p>
             </figure>
           </div>
           <hr>
@@ -77,23 +77,23 @@
           <h3>Vida nocturna</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Ruta</h5>
-              <a><img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta"></a>
-              <p>La mejor música de actualidad para pasarlo en grande.</p>
+              <h4>D'Night Pub Karaoke</h4>
+              <a><img src="../img/pamplona/d-night-pub-karaoke.jpg" alt="D'Night Pub Karaoke"></a>
+              <p>Ambiente genial y un listado interminable de canciones a elegir.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Vanitas</h5>
-              <a><img src="../img/santiago/vanitas.webp" alt="Discoteca Vanitas"></a>
-              <p>Discoteca céntrica con un gran ambiente.</p>
+              <h5 id="titulo">Woodstock Pamplona</h5>
+              <a><img src="../img/pamplona/woodstock.jpg" alt="Woodstock Pamplona"></a>
+              <p>Pub con una música buenísima tipo rock y de los 80.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pub Momo</h5>
-              <a><img src="../img/santiago/momo.jpg" alt="Pub Momo"></a>
-              <p>Dardos, futbolín, billar... un pub de los de siempre!</p>
+              <h5 id="titulo">Cervecería La Estafeta</h5>
+              <a><img src="../img/pamplona/la-estafeta.jpg" alt="Cervecería La Estafeta"></a>
+              <p>Bar en la calle típica de tapas para una gran noche. </p>
             </figure>
           </div>          
         </div>
