--- a/pages/saint-jean-pied-de-port.html
+++ b/pages/saint-jean-pied-de-port.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Santiago de Compostela - El amigo del peregrino</title>
+    <title>Saint Jean Pied de Port - El amigo del peregrino</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -34,15 +34,12 @@
   <div class="content">
     <div class="info-general">
       <figure class="info-imagen">
-        <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
-        <h1 class="titulo">Santiago de Compostela</h1>
+        <img src="../img/saintjean/portada.jpg" alt="Saint Jean Pied de Port">
+        <h1 class="titulo">Saint Jean Pied de Port</h1>
       </figure>
       <p>
-        La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
-        Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
-        Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
-        La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
-        La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+        "San Juan de Pie de Puerto" es una localidad francesa situada en el departamento de Pirineos Atlánticos
+        en la región de Nueva Aquitania en el territorio histórico de la Baja Navarra, uno de los territorios vascos de ultrapirineos o Iparralde.
       </p>
     </div>
     <hr>
@@ -52,23 +49,23 @@
           <h3>Dónde Comer</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">La Galiciana</h5>
-              <a><img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana"></a>
-              <p>Disfruta de los mejores sabores santiagueses</p>
+              <h4>Oillarburu</h4>
+              <a><img src="../img/saintjean/oillarburu.jpg" alt="Oillarburu"></a>
+              <p>Las mejores delicias de la cocina vasca en la primera parada del camino francés.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pepa a Loba</h5>
-              <a><img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba"></a>
-              <p>Situado en plena zona vella.</p>
+              <h5 id="titulo">Le Chat Perché</h5>
+              <a><img src="../img/saintjean/le-chat-perche.jpg" alt="Le Chat Perché"></a>
+              <p>Servicio rápido, menú variado y especialidades locales.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">O Rei do Bocadillo</h5>
-              <a><img src="../img/santiago/o-rei-do-bocadillo.jpg" alt="O Rei do Bocadillo"></a>
-              <p>Bocadillos caseros a muy buen precio. ¡No te lo pierdas!</p>
+              <h4>Café Ttipia</h4>
+              <a><img src="../img/saintjean/cafe-ttipia.jpg" alt="Café Ttipia"></a>
+              <p>Terraza muy agradable en un bonito entorno.</p>
             </figure>
           </div>
           <hr>
@@ -77,23 +74,23 @@
           <h3>Vida nocturna</h3>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Ruta</h5>
-              <a><img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta"></a>
-              <p>La mejor música de actualidad para pasarlo en grande.</p>
+              <h4>Bar Brasserie du Trinquet</h4>
+              <a><img src="../img/saintjean/bar-brasserie-du-trinquet.JPG" alt="Bar Brasserie du Trinquet"></a>
+              <p>Bar local para tomar una cerveza en un ambiente francés.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Vanitas</h5>
-              <a><img src="../img/santiago/vanitas.webp" alt="Discoteca Vanitas"></a>
-              <p>Discoteca céntrica con un gran ambiente.</p>
+              <h5 id="titulo">Hôtel des Pyrénées</h5>
+              <a><img src="../img/saintjean/hotel-des-pyrenees.jpg" alt="Hôtel des Pyrénées"></a>
+              <p>Sitio agradable donde amenizar tu noche con un cóctel.</p>
             </figure>
           </div>
           <div class="col-sm">
             <figure>
-              <h5 id="titulo">Pub Momo</h5>
-              <a><img src="../img/santiago/momo.jpg" alt="Pub Momo"></a>
-              <p>Dardos, futbolín, billar... un pub de los de siempre!</p>
+              <h5 id="titulo">Bar Snack Pausa</h5>
+              <a><img src="../img/saintjean/bar-snack-pausa.jpg" alt="Bar Snack Pausa"></a>
+              <p>Bar de ambiente familiar donde tomar algo tranquilamente. </p>
             </figure>
           </div>          
         </div>
